--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -9,7 +9,6 @@
     <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\Enemy.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_CurrentAnimStateCheck.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Interaction.cpp" />
-    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Transcendence.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Hit.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Run.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Die.cpp" />
@@ -80,6 +79,8 @@
     <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Map\Water.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.cpp" />
+    <ClCompile Include="src\DUOLClient\Manager\UIDataManager.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
@@ -128,7 +129,6 @@
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Die.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Run.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Hit.h" />
-    <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Transcendence.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Interaction.h" />
     <ClInclude Include="include\DUOLClient\Manager\ParticleManager.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\ParticleData.h" />
@@ -160,11 +160,10 @@
     <ClInclude Include="include\DUOLClient\ECS\Component\InGameUI.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_SetNavOnRigidbodyOff.h" />
     <ClInclude Include="include\DUOLClient\Manager\EnemyAudioManager.h" />
-    <ClInclude Include="include\DUOLClient\Manager\UIDataManager.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Contents\DominationArea.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Map\Water.h" />
+    <ClInclude Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Ultimate.h" />
   </ItemGroup>
 </Project>
