--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -179,6 +179,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_CloseEnemyRayCast.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.cpp" />
@@ -259,6 +260,7 @@
     <ClCompile Include="src\DUOLClient\Manager\UIDataManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_CloseEnemyRayCast.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Contents\DominationArea.h" />
