--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -80,6 +80,7 @@
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\UIDataManager.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_CloseEnemyRayCast.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
@@ -164,5 +165,6 @@
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Ultimate.h" />
     <ClInclude Include="include\DUOLClient\Manager\UIDataManager.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_CloseEnemyRayCast.h" />
   </ItemGroup>
 </Project>
