FixedUpdate TimeScale 미적용. 물리버그 해결, 플레이어 사운드 추가. A구역 점령지 컴포넌트 제작
물리와 FixedUpdate 가 timescale에 영향받지않고 업데이트하도록 변경하였습니다.
Trigger lost 미호출 버그 수정

--- a/DUOLPhysics/DUOLPhysics.vcxproj
+++ b/DUOLPhysics/DUOLPhysics.vcxproj
@@ -337,6 +337,7 @@
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsMesh.h" />
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsConvexMesh.h" />
     <ClInclude Include="include\DUOLPhysics\Util\PhysicsFlags.h" />
+    <ClInclude Include="src\DUOLPhysics\Scene\PhysicsSimulationFilterCallback.h" />
     <ClInclude Include="src\DUOLPhysics\Scene\QueryFilterCallback.h" />
     <ClInclude Include="src\DUOLPhysics\Actor\PhysicsUserData.h" />
     <ClInclude Include="src\DUOLPhysics\System\PhysicsEventDispatcher.h" />
@@ -351,6 +352,11 @@
     <ClInclude Include="src\DUOLPhysics\Util\PhysicsTypeConverter.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLPhysics\Scene\PhysicsSimulationFilterCallback.cpp">
+      <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Level4</WarningLevel>
+      <TreatWarningAsError Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</TreatWarningAsError>
+      <TreatWarningAsError Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</TreatWarningAsError>
+    </ClCompile>
     <ClCompile Include="src\DUOLPhysics\Scene\QueryFilterCallback.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsConvexMesh.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsMesh.cpp" />
